# SignalDigitization

./: .gitignore  CMakeLists.txt  LICENSE.md  README.md  build.bat  index.html  index.js  index.wasm  signal_digitalization.sln
.github/workflows/: main.yml
GUI/: GUI.vcxproj  GUI.vcxproj.filters
GUI/includes/: ImGuiFileDialog.h  ImGuiFileDialogConfig.h  dirent.h  gui.h  gui_conf.h  imconfig.h  imgui.h  imgui_impl_dx10.h  imgui_impl_opengl3.h  imgui_impl_opengl3_loader.h  imgui_impl_sdl.h  imgui_impl_win32.h  implot.h
GUI/src/: ImGuiFileDialog.cpp  gui.cpp  imgui.cpp  imgui_demo.cpp  imgui_draw.cpp  imgui_impl_dx10.cpp  imgui_impl_opengl3.cpp  imgui_impl_sdl.cpp  imgui_impl_win32.cpp  imgui_tables.cpp  imgui_widgets.cpp  implot.cpp  implot_demo.cpp  implot_items.cpp
dependencies/includes/MagicEnum/: magic_enum.hpp  magic_enum_format.hpp  magic_enum_fuse.hpp
dependencies/includes/exprtk/: exprtk.hpp
signal_digitalization/: Example.cfg  Noise example.cfg  config_manager.cpp  config_manager.h  json.h  main.cpp  noise_generator.h  plot_manager.cpp  plot_manager.h  signal_digitalization.vcxproj  signal_digitalization.vcxproj.filters  structs.h
